...
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="@dimen/icon_chooser"
                android:text="@string/icons.chooser"
                />
            <TextView
                android:id="@+id/systemNetworkFieldNetworkChooserTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/systemNetworkFieldNetworkIconTextView"
                android:layout_centerInParent="true"
                android:singleLine="true"
...
            android:id="@+id/systemNetworkFieldPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/systemNetworkFieldPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="44dp"
                android:hint="@string/setup.system.network.password.hint"
                android:singleLine="true"
                android:inputType="textPassword"
...
