...
        android:id="@id/addNewBridgeFooterButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/addNewBridgeFooterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup.system.addSystemButton"
            android:layout_gravity="center_horizontal"
            style="@style/FooterButton.Teal"
            />
...
